--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-118">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
@@ -44,6 +44,6 @@
         <!-- Контейнер для анимации загрузки Lottie -->
         <div id="loadingAnimation" class="hidden" style="width: 180px; height: 180px;"></div>
     </div>
-    <script src="assets/main.js"></script>
+    <script src="/assets/main.js"></script>
 </body>
 </html>
